--- a/02_example/example.tex
+++ b/02_example/example.tex
@@ -8,3 +8,4 @@
 
 \vspace{10mm}
 
+\textbf{***Second Earth parallel reality example, think about what that person at DEMOfest was saying about being able to walk around Paris \& at any moment/location to transition into what it was like in the past.}
