--- a/03_background/literature_review.tex
+++ b/03_background/literature_review.tex
@@ -433,49 +433,21 @@ Should a bidirectional information flow be introduced to a parallel reality syst
 
 \subsection{Spatial Equivalence in Parallel Reality Systems}
 
-When discussing a parallel reality system that allows a user to transition between two environments, one real \& the other virtual, one has to consider the relationship between the two environments, namely whether (\& if so, how much) their layout, dimensions \& content relate to each other $-$ their \textit{spatial equivalence}.
+\newcommand{\turklevrfootnote}{\footnote{\textit{``For virtual reality to be interesting it has to emulate the real. But you have to be able to do something in the virtual that you couldn't in the real.''} (Life on the Screen, p219)}}
 
-Naturally a parallel reality system would be unrewarding if the real \& virtual environments were identical, however a virtual environment that shares the same fundamental dimensions \& layout as the real environment (it represents the same `place') but presents an alternative representation has been proven to be a useful modality in previous XR research (see section \ref{sec_crossreality}) \& it is this arrangement that the systems developed by this thesis focus on, in particular where the virtual environment represents the same place but at an earlier moment in time.
+When discussing a parallel reality system that allows a user to transition between two environments, one real \& the other virtual, one must consider the relationship between the two environments, namely whether (\& if so, how much) their layout, dimensions \& content relate to each other $-$ their \textit{spatial equivalence}.
 
-\textbf{***here}
+A parallel reality system would be unrewarding if the real \& virtual environments were identical\turklevrfootnote{}. However a virtual environment that shares roughly the same fundamental dimensions \& layout as the real environment (it represents the same `place') but presents an alternative representation has been proven to be a useful modality in previous XR research (see section \ref{sec_crossreality}) \& it is this arrangement that the systems developed by this thesis focus on, in particular those where the virtual environment represents the same place as the real environment but at an earlier moment in time.
 
-One might consider the `Second Earth' concept to be the ultimate realisation of this scenario of spatially equivalent real and virtual environments. Discussed by Wade Roush in a 2007 article of MIT's Technology Review magazine~\cite{Roush2007}, which is cited by Lifton in his thesis, Second Earth is theorised as the combination of the notions of virtual world technology (as in Second Life) with `mirror world' technology (as in Google Earth); Second Earth theorises a virtual simulation/reconstruction of the entire physical world, such that for any location in the real world there is a corresponding location in the virtual world. Such a resource would allow for simultaneous presence in corresponding real and virtual environments to take place anywhere, rather than being restricted to specific real world locations for which a corresponding virtual location had been created, such as a cultural heritage site.
+One might consider the `Second Earth' concept to be the ultimate realisation of this scenario of spatially equivalent real and virtual environments. Discussed in detail in a 2007 Technology Review article~\cite{Roush2007}, Second Earth is theorised as the combination of the notions of virtual world technology (as in Second Life) with `mirror world' technology (as in Google Earth); Second Earth theorises a virtual simulation/reconstruction of the entire physical world, such that for any location in the real world there is a corresponding location in the virtual world. The systems developed in this thesis focus on a single small location, however it does not take a great leap of imagination to understand the worth of such a system scaled to larger, even global, sizes.
 
-Furthermore, if one were to apply the concepts of cross reality to such a global virtual reconstruction, it would in effect create a complete parallel virtual Earth.
+Although the use cases for parallel reality systems that feature completely unrelated real \& virtual environments (including where the virtual environment is entirely fictitious) may seem limited in terms of possible benefits to understanding or knowledge gain when comparing \& contrasting the environments, an educated approach to implementing transitions between these environments, that takes similar considerations as the systems developed in this thesis, does conceivably have a purpose.
 
-\subsubsection{Snow Crash - No Spatial Equivalence}
-In the opening quote to this review, taken from Neal Stephenson's cyberpunk novel \textit{Snow Crash}, the protagonist enquires about the location of another character, called Y.T., both in the real world and in the `Metaverse'. For the sake of this discussion, this Metaverse can be considered analogous to a virtual world akin to Second Life, accessed via a head mounted display, and comprises an entirely synthetic virtual world whose locations have no counterparts in the real world. Y.T.'s response is that \textit{``In  the Metaverse, I'm on a plusbound monorail train. Just passed by Port 35.''} whilst in reality she is at a \textit{``Public terminal across the street from a Reverend Wayne's"}.
+In the opening quote to this chapter, taken from Neal Stephenson's cyberpunk novel \textit{Snow Crash}, the protagonist enquires about the location of another character, called Y.T., both in the real world and in the `Metaverse'. For the sake of this discussion, the Metaverse can be considered analogous to a virtual world akin to Second Life, accessed via a head mounted display, and comprises an entirely synthetic virtual world whose locations have no counterparts in the real world. Y.T.'s response is that \textit{``In  the Metaverse, I'm on a plusbound monorail train. Just passed by Port 35.''} whilst in reality she is at a \textit{``Public terminal across the street from a Reverend Wayne's"}.
 
-In this scenario there is no spatial equivalence between the real environment and the virtual environment - they are not the same `location' or `place' as is the case with VTW - however the concept of simultaneous presence in both can still be useful, as illustrated later in the book. Y.T. is in fact waiting for a third character, Ng, to come and collect her, which leads to the following conversation in the Metaverse between Y.T. and Ng
+In this scenario there is no spatial equivalence between the real environment and the virtual environment - they are not the same `location' or `place', however the protagonist still wishes to be able to experience both by transitioning between them, paying attention to one while travelling through the other. While this situation is currently science fiction, recent developments in mobile VR platforms such as Samsumg Gear VR hint that we are not so far away from a time in which members of the general public will wish to multiplex their real environment with a virtual one while in public, in the same way that people commonly engage in CMC via their smartphones at the same time as walking through real environments \& conversing with the people in them, in instantiations of PoSR \& informing the implementation of transitions in such systems with the findings of the experiments of this thesis into spatially equivalent parallel reality systems will be of benefit to them.
 
-\begin{quote}
-\textit{``\ldots you're driving?''}
-\\
-\\
-\textit{``Yes. I'm coming to pick you up - remember?''}
-\\
-\\
-\textit{``Do you mind?''}
-\\
-\\
-\textit{``No,'' he sighs, as if he really does.}
-\\
-\\
-\textit{Y.T. gets up and walks around behind his desk to look.}
-\\
-\\
-\textit{Each of the little TV monitors is showing a different view out his van; windshield,  left  window,  right  window, rearview.  Another  one  has  an electronic map  showing his position: inbound on the San Bernardino, not far
-away.}
-\\
-\\
-\textit{``The  van  is  under  voice  command,''  he  explains.  ``I  removed  the steering-wheel-and-pedal  interface because  I found  verbal  commands  more convenient. This  is why I will  sometimes  make unfamiliar  sounds with  my voice - I am controlling the vehicle's systems.''}
-\end{quote}
-
-Ng is driving his van in the real world to come and collect the real Y.T, whilst simultaneously sitting in his virtual house in the Metaverse having a conversation with the virtual Y.T., using a series of virtual TV monitors in the Metaverse to inform him of his real surroundings and to allow him to control the van.
-
-In this scenario there is necessarily no spatial equivalence between the real environment and the virtual environment, as the virtual environment has no spatial equivalent in the real world - the monorail and Ng's house have no real counterparts. However a lack of spatial equivalence between the real environment and the virtual environment could also arise when the virtual location does have a real counterpart, but the user isn't there. For example, in reality a user could be in London whilst in the virtual environment they could be in a location that is spatially equivalent to a real part of Hong Kong.
-
-It is already common to see people interacting with their real location, even if that interaction is limited to just walking from A to B without bumping into too many other people or being run over by a bus, whilst simultaneously interacting with the 2D Web, social media and textual chat via mobile devices such as mobile phones and tablets. With the continued trend toward the 3D Web, it is no leap to imagine a near future in which people regularly want to interact with a 3D virtual environment that is not spatially equivalent to their current location at the same time as walking to the bus stop, thus simultaneous presence in real and virtual environments that are not spatially equivalent promises to be a desirable scenario.
+\textbf{*** Ready Player One, bit where protagonist enters a net cafe \& the clerk has a semi-transparent visor such that s/he can observe real world clients whilst also paying attention to a spatially inequivalent fictitious virtual environment.}
 
 %=========================================================================================================
 
@@ -531,7 +503,15 @@ It is already common to see people interacting with their real location, even if
 %=========================================================================================================
 %=========================================================================================================
 
+\pagebreak
+
 \section{On Presence}
+
+Any investigation into alternate realities, virtual reality in particular, is likely to involve discussion of \textit{presence} - the subjective experience of being in one place or environment, even when one is physically situated in another~\cite{Witmer1998}. Presence is distinguished from the concept of \textit{immersion}, an objective description of a technology, describing the extent to which it is capable of delivering an illusion of reality to the sense of the user~\cite{Slater1997}. In current theoretical models, the sense of presence is seen as the outcome, or a direct function of, immersion; the more inclusive, extensive, surrounding \& vivd the VE is, or the more similar the transformations in the VE are to those in the real world, the higher the presence~\cite{Constantin2003}.
+
+Related is the concept of involvement, defined in this context as the psychological state experienced as a consequence of focusing one's energy \& attention on a coherent set of stimuli \& it is theorized that both involvement \& immersion are necessary for experienced presence~\cite{Witmer1998}.
+
+\textbf{Presence \& Parallel Reality}
 
 \subsection{Combined Milgram \& Kishino continuum/Waterworth \& Waterworth three dimensions of virtual experience model}
 
@@ -539,7 +519,11 @@ It is already common to see people interacting with their real location, even if
 
 \newcommand{\absencefootnote}{\footnote{\textbf{Absence} is defined as \textit{``a psychological focus on \ldots conceptual processing''}~\cite{Waterworth2001}.}}
 
-The virtuality continuum is here considered to be analogous to the \textit{locus of attention} axis of Waterworth \& Waterworth's \textit{three dimensions of virtual experience} model~\cite{Waterworth2001}; the combination of these models is shown by figure \ref{focus-locus-sensus-with-virtuality-continuum}. In this model, locus of attention represents the environment where the stimuli that the user is perceiving originate from; focus of attention represents the balance between conceptual/abstract reasoning \& perceptual/concrete processing, where complex conceptual reasoning results in little attention being paid to processing environmental percepts (whether originating from real or virtual stimuli) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}; and sensus of attention represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, a mix, or not directed toward any percepts in the case of completely `absent' conceptual reasoning.
+This notion of the sense of presence depending upon multiple factors is explored further by Waterworth \& Waterworth who present the \textit{three dimensions of virtual experience} model~\cite{Waterworth2001}. In this model, the \textit{locus of attention} axis represents the environment where the stimuli that the user is perceiving originate from; the \textit{focus of attention} axis represents the balance between conceptual/abstract reasoning \& perceptual/concrete processing, where complex conceptual reasoning results in little attention being paid to processing environmental percepts (whether originating from real or virtual stimuli) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}; and the \textit{sensus of attention} axis represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, a mix, or not directed toward any percepts in the case of completely `absent' conceptual reasoning.
+
+In this model, the notion of \textit{involvement} relates most closely to the \textit{focus of attention} axis; heightened involvement pertains to concentrating on environmental stimuli or meaningfully related activities \& events, while heightened focus pertains to increased perceptual/concrete processing; lessened involvement pertains to a preoccupation with personal problems or activities occurring outwith the environment of interest, while lessened focus pertains to increased conceptual/abstract reasoning.
+
+Similarly, a relationship can be drawn between Milgram \& Kishino's virtuality continuum \& the three dimensions of virtual experience model, with the virtuality continuum here considered to be analogous to the \textit{locus of attention} axis; the combination of these models is shown by figure \ref{focus-locus-sensus-with-virtuality-continuum}.
 
 \begin{figure}[h]
 	\begin{center}
